--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/litepal-1.1.0.jar')
-    compile files('libs/litepal-1.1.0-src.jar')
-    compile files('libs/litepal-1.1.1-src.jar')
+//    compile files('libs/litepal-1.1.0.jar')
+//    compile files('libs/litepal-1.1.0-src.jar')
+//    compile files('libs/litepal-1.1.1-src.jar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
